--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
+# Pinaka-AI: Unified Requirements
+# Core web app
 flask==2.3.3
 flask-socketio==5.3.6
 python-dotenv==1.0.0
-ultralytics==8.0.196
-opencv-python==4.8.0.74
-torch==2.0.1
-torchvision==0.15.2
 python-engineio==4.7.1
 python-socketio==5.9.1
-eventlet==0.33.3 
+eventlet==0.33.3
+
+# YOLO and deep learning
+ultralytics>=8.0.0
+opencv-python>=4.5.0
+Pillow>=8.0.0
+torch>=2.0.1
+torchvision>=0.15.2
+
+# Data processing and visualization
+pandas>=1.5.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# Scientific computing
+numpy>=1.21.0
+scipy>=1.7.0
+
+# System utilities
+psutil>=5.8.0
+pathlib2>=2.3.0
+
+tqdm>=4.60.0
