--- a/training/config.yaml
+++ b/training/config.yaml
@@ -3,8 +3,8 @@
 # Training dataset: 1,120 images
 # Validation dataset: 189 images
 
-# Dataset paths (absolute path)
-path: C:\Users\kambl\Desktop\Aniket\Degree\Main\BE\Final Year Project\Pinaka-AI
+# Dataset paths (relative path for portability)
+path: .
 train: custom_dataset/images/train
 val: custom_dataset/images/val
 
