--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ flask==2.3.3
 flask-socketio==5.3.6
 python-dotenv==1.0.0
 python-engineio==4.7.1
-python-socketio==5.9.1
+python-socketio==5.13.0
 eventlet==0.33.3
+gunicorn==21.2.0
+flask-wtf==1.2.1
 
 # YOLO and deep learning
 ultralytics>=8.0.0
