--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 flask==2.3.3
 flask-socketio==5.3.6
 python-dotenv==1.0.0
-python-engineio==4.7.1
+python-engineio>=4.11.0
 python-socketio==5.13.0
 eventlet==0.33.3
 gunicorn==21.2.0
