--- a/render.yaml
+++ b/render.yaml
@@ -12,3 +12,9 @@ services:
         value: true
       - key: YOLO_CONFIG_DIR
         value: /tmp/yolo_config
+      - key: ULTRALYTICS_NO_CACHE
+        value: 1
+      - key: XDG_CONFIG_HOME
+        value: /tmp/.config
+      - key: PYTHONUNBUFFERED
+        value: 1
