--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,9 @@
 # Model files
-*.pt filter=lfs diff=lfs merge=lfs -text
+# *.pt filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.onnx filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.hdf5 filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
-*.weights filter=lfs diff=lfs merge=lfs -text 
+*.weights filter=lfs diff=lfs merge=lfs -text
